Dark mode is cool and all, but that was too buggy. Revert.

--- a/css/styles.css
+++ b/css/styles.css
@@ -282,14 +282,3 @@ svg {
     padding-right: 18px;
   }
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    filter: invert(95%) hue-rotate(180deg);
-  }
-
-  img {
-    filter: invert(100%) hue-rotate(180deg);
-  }
-
-}
